--- a/style/base.css
+++ b/style/base.css
@@ -4,8 +4,23 @@
     padding: 0;
     border: 0;
     box-sizing: border-box;
+    outline: none;
 }
 body{
     max-width: 100%;
+    height: 100%;
+    color: #404040;
+    font-family: sans-serif;
+    line-height: 1.5;
     overflow-x: hidden;  
+}
+a {
+    color: #ddd;
+    text-decoration: none;
+}
+
+img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
