Add display the wonders based on API and add a button to view the details

--- a/style/home.css
+++ b/style/home.css
@@ -124,3 +124,10 @@
 	font-weight: bold;
 	color: aqua;
 }
+
+.summary{
+	white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 300px;
+}
