--- a/style/home.css
+++ b/style/home.css
@@ -102,7 +102,7 @@
 	margin-bottom: 10px;
 }
 .add-to-cart:hover, .view-details:hover {
-	background-color: orangered;
+	background-color: rgb(48, 43, 41);
 	color: #fff;
 	border: none;
 }
